[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/testando_seus_conhecimentos/testando_seus_conheciments.gd" type="Script" id=1]
[ext_resource path="res://icone/menu.png" type="Texture" id=2]
[ext_resource path="res://icone/voltar.png" type="Texture" id=3]
[ext_resource path="res://script/testando_seus_conhecimentos/button2.gd" type="Script" id=4]
[ext_resource path="res://script/testando_seus_conhecimentos/button.gd" type="Script" id=5]
[ext_resource path="res://temas/botoes_de_funcaobasica.tres" type="Theme" id=6]
[ext_resource path="res://temas/lineedit.tres" type="Theme" id=7]
[ext_resource path="res://fontes/new_dynamicfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://fontes/exemplo_fonte_dinamica.tres" type="DynamicFont" id=9]
[ext_resource path="res://imagem/fundos/mini_logo.png" type="Texture" id=10]

[node name="testandoseusconhecimentos" type="Control"]
script = ExtResource( 1 )

[node name="sprite" type="TextureRect" parent="."]
rect_scale = Vector2( 0.83, 0.83 )

[node name="label" type="Label" parent="."]
margin_left = 418.0
margin_top = 514.0
margin_right = 859.0
margin_bottom = 603.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="lineedit" type="LineEdit" parent="."]
margin_left = 519.0
margin_top = 611.0
margin_right = 761.0
margin_bottom = 699.0
theme = ExtResource( 7 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 6 )
icon = ExtResource( 2 )
script = ExtResource( 5 )

[node name="button2" type="Button" parent="."]
margin_left = 71.0
margin_right = 142.0
margin_bottom = 71.0
theme = ExtResource( 6 )
icon = ExtResource( 3 )
script = ExtResource( 4 )

[node name="label2" type="Label" parent="."]
margin_left = 720.0
margin_top = 545.0
margin_right = 1045.0
margin_bottom = 621.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )

[node name="MiniLogo" type="Sprite" parent="."]
position = Vector2( 1188, 680 )
texture = ExtResource( 10 )

[node name="label3" type="Label" parent="."]
margin_left = 406.0
margin_top = 11.0
margin_right = 900.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "INSIRA A RESPOSTA CORRETA PARA PROSEGUIR!"

[connection signal="text_entered" from="lineedit" to="." method="_on_lineedit_text_entered"]
[connection signal="button_up" from="button" to="button" method="_on_button_button_up"]
[connection signal="button_up" from="button2" to="button2" method="_on_button2_button_up"]
[connection signal="focus_entered" from="label2" to="." method="_on_label2_focus_entered"]
